--- a/IOS_MVVM_SWIFT/Base.lproj/Main.storyboard
+++ b/IOS_MVVM_SWIFT/Base.lproj/Main.storyboard
@@ -48,14 +48,55 @@
                     <view key="view" contentMode="scaleToFill" id="fEP-GP-2ul">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hio-Pp-MU4">
+                                <rect key="frame" x="0.0" y="88" width="414" height="298.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ScA-Ys-hhh">
+                                <rect key="frame" x="20" y="396.5" width="374" height="119"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="g7R-Ou-iOF">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="Small"/>
+                                            <segment title="Medium"/>
+                                            <segment title="Large"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Numbers of item" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C0I-HM-17t">
+                                        <rect key="frame" x="0.0" y="41" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BYr-Ed-e5j">
+                                        <rect key="frame" x="0.0" y="85" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="hio-Pp-MU4" firstAttribute="width" secondItem="fEP-GP-2ul" secondAttribute="width" id="2up-sh-YYZ"/>
+                            <constraint firstItem="hio-Pp-MU4" firstAttribute="leading" secondItem="Bjd-CX-gG6" secondAttribute="leading" id="4no-Du-Bo4"/>
+                            <constraint firstItem="ScA-Ys-hhh" firstAttribute="top" secondItem="hio-Pp-MU4" secondAttribute="bottom" constant="10" id="6bV-aX-b2D"/>
+                            <constraint firstItem="ScA-Ys-hhh" firstAttribute="centerX" secondItem="fEP-GP-2ul" secondAttribute="centerX" id="9Er-Fd-GDO"/>
+                            <constraint firstItem="hio-Pp-MU4" firstAttribute="height" secondItem="fEP-GP-2ul" secondAttribute="height" multiplier="1:3" id="SNJ-od-Eha"/>
+                            <constraint firstItem="Bjd-CX-gG6" firstAttribute="trailing" secondItem="ScA-Ys-hhh" secondAttribute="trailing" constant="20" id="Xq4-dT-JAC"/>
+                            <constraint firstItem="hio-Pp-MU4" firstAttribute="top" secondItem="Bjd-CX-gG6" secondAttribute="top" id="bJj-ur-zr0"/>
+                            <constraint firstItem="ScA-Ys-hhh" firstAttribute="leading" secondItem="Bjd-CX-gG6" secondAttribute="leading" constant="20" id="qWf-jE-6CR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bjd-CX-gG6"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Add Order" id="9yh-ac-Su9"/>
+                    <navigationItem key="navigationItem" title="Add Order" id="9yh-ac-Su9">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="cyX-cB-wdU"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="npJ-fT-mpG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1926" y="25"/>
+            <point key="canvasLocation" x="1924.6376811594205" y="24.776785714285712"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Cy7-zu-dHP">
