--- a/IOS_MVVM_SWIFT/Base.lproj/Main.storyboard
+++ b/IOS_MVVM_SWIFT/Base.lproj/Main.storyboard
@@ -52,25 +52,31 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hio-Pp-MU4">
                                 <rect key="frame" x="0.0" y="88" width="414" height="298.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CoffeeVariationTableViewCell" id="StB-xa-wXS">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="StB-xa-wXS" id="qfO-nQ-6PA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="5vK-Dr-0jh" id="Y3w-NU-LeR"/>
+                                    <outlet property="delegate" destination="5vK-Dr-0jh" id="5VC-mG-6CJ"/>
+                                </connections>
                             </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ScA-Ys-hhh">
-                                <rect key="frame" x="20" y="396.5" width="374" height="119"/>
+                                <rect key="frame" x="20" y="396.5" width="374" height="78"/>
                                 <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="g7R-Ou-iOF">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
-                                        <segments>
-                                            <segment title="Small"/>
-                                            <segment title="Medium"/>
-                                            <segment title="Large"/>
-                                        </segments>
-                                    </segmentedControl>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Numbers of item" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C0I-HM-17t">
-                                        <rect key="frame" x="0.0" y="41" width="374" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C0I-HM-17t">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BYr-Ed-e5j">
-                                        <rect key="frame" x="0.0" y="85" width="374" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BYr-Ed-e5j">
+                                        <rect key="frame" x="0.0" y="44" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -91,8 +97,18 @@
                         <viewLayoutGuide key="safeArea" id="Bjd-CX-gG6"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add Order" id="9yh-ac-Su9">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="cyX-cB-wdU"/>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="cyX-cB-wdU">
+                            <connections>
+                                <action selector="save:" destination="5vK-Dr-0jh" id="Uku-3y-yDA"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="bottomStackView" destination="ScA-Ys-hhh" id="G3c-Sg-VVS"/>
+                        <outlet property="coffeeVariationTableView" destination="hio-Pp-MU4" id="xIF-oV-5we"/>
+                        <outlet property="emailTextField" destination="BYr-Ed-e5j" id="1Lx-1D-LgM"/>
+                        <outlet property="nameTextField" destination="C0I-HM-17t" id="lfb-VQ-ZqK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="npJ-fT-mpG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
